Fixed footer overlap

--- a/app/assets/stylesheets/page_styles/content_styles.scss
+++ b/app/assets/stylesheets/page_styles/content_styles.scss
@@ -226,6 +226,7 @@
     margin-top: 20px;
   }
   .page-content {
+    min-height: 700px;
     padding-left: 0;
     padding-right: 0;
     margin-left: 26%;
@@ -265,7 +266,6 @@
     }
     .page-content {
       padding-top: 100px;
-      min-height: 600px;
     }
   }
 
